--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = {version="4.4.18", features=["cargo"]}
+serde = {version="1.0.196", features=["derive"]}
+serde_json = "1.0.1"
