--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ edition = "2021"
 clap = {version="4.4.18", features=["cargo"]}
 serde = {version="1.0.196", features=["derive"]}
 serde_json = "1.0.1"
+
+[dev-dependencies]
+assert_cmd = "0.11.0"
+predicates = "1.0.0"
